# keeping_up_with_ai

./: .gitignore  AGENTS.md  DESIGN.md  PLAYBOOK.md  README.md  papers.txt  pyproject.toml  sources.yaml  state.jsonl  winery-copilot-architecture.md
.github/workflows/: daily-scrape.yml
kb/: AGENTS.md  CLAUDE.md  catalog.jsonl  taxonomy.yaml
kb/_inbox/: arize--blog-cost-per-successful-task-ai-model-benchmark.md  arize--blog-from-human-operated-agent-development-to-systematic-agent-improvement.md  arize--blog-how-do-you-make-an-llm-anyway-microsoft-textbook.md  arize--blog-how-openai-turns-user-feedback-into-product-improvements.md  arize--blog-how-to-measure-ai-productivity-llm-cost-business-value.md  arize--blog-inside-cursors-agent-factory-how-it-verifies-ai-written-code.md  arize--blog-kiro-cli-observability-arize-skills.md  arize--blog-measuring-human-llm-judge-alignment.md  baseten--blog-ai-retrieval-nvidia-nemotron-3-embed.md  baseten--blog-glm-52-with-vision.md  baseten--blog-h100-vs-h200-gpus.md  baseten--blog-how-to-choose-a-model-lessons-from-notion-and-gamma.md  baseten--blog-how-to-optimize-llm-inference-speed-and-reduce-costs-in-production.md  baseten--blog-introducing-glm-52-fast.md  baseten--blog-introducing-step-37-flash-multimodal-reasoning.md  baseten--blog-meet-inkling-thinking-machines-labs-new-model.md  baseten--blog-real-time-video-generation-inference-on-baseten.md  braintrust--blog-model-behind-topics-baseten.md  (+64 more)
kb/_sources/: arize.md  (+19 more)
scraper/: __init__.py  __main__.py  config.py  extract.py  fetch.py  index.py  papers.py  state.py  store.py
(+1578 files in other folders)
