[project]
name = "kb-scraper"
version = "0.1.0"
description = "Scrapes AI engineering blogs into a topic-organized markdown knowledge base"
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]>=0.27",
    "feedparser>=6.0",
    "trafilatura>=1.12",
    "selectolax>=0.3",
    "pypdf>=5.0",
    "pydantic>=2.7",
    "typer>=0.12",
    "PyYAML>=6.0",
]

[project.scripts]
scraper = "scraper.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scraper"]
